minor changes to text

--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Stellar by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Stellar by HTML5 UP</title>
+		<title>Oleksandr Gribov</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -69,13 +64,13 @@
 											 Going back and forth between Yelp and WhatsApp to check out the suggestions
 											  and see who prefers which option was often quite tedious.</p>
 										<p> <b>Functionality </b></p>
-										<p> Groupchoice basically combined two apps into one and provided a simple interface to create polls and vote on the option
-											 you preferred. Built in chat also allowed for discussion and comments to be made very easily. 
+										<p> Groupchoice combines two apps into one and provides a simple interface to create polls and vote on the option
+											 you preferr. Built in chat also allows for discussion and comments to be made very easily. 
 											 You could browse nearby places or search for anything particular like “Sushi” or “Afghan cuisine”. </p>
 										<p> <b>Tech Stack </b></p>
 										<p> Firebase, Google Places API, MapKit and CoreLocation, SnapKit, Cocoapods, Programmatic UI </p>
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
+											<li><a href="https://github.com/oleksandr-gribov/GroupChoice" class="button">View on GitHub</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
