changed skills section

--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
 											<h2>GroupChoice</h2>
 										</header>
 										<p><b>Inspiration</b></p>
-										<p> In college my friends and I would go to dinner every week. 
+										<p> In college my friends and I would go out for dinner every week. 
 											 However, 7-10 people deciding on one place to go is never easy. 
 											 Going back and forth between Yelp and WhatsApp to check out the suggestions
 											  and see who prefers which option was often quite tedious.</p>
 										<p> <b>Functionality </b></p>
-										<p> Groupchoice combines two apps into one and provides a simple interface to create polls and vote on the option
-											 you preferr. Built in chat also allows for discussion and comments to be made very easily. 
-											 You could browse nearby places or search for anything particular like “Sushi” or “Afghan cuisine”. </p>
+										<p> Groupchoice combines two apps into one providing a simple interface to create polls and vote on the option
+											 you prefer. Built in chat also allows for discussion and comments to be made very easily. 
+											 You can browse nearby places or search for anything particular like “Sushi” or “Afghan cuisine”. </p>
 										<p> <b>Tech Stack </b></p>
 										<p> Firebase, Google Places API, MapKit and CoreLocation, SnapKit, Cocoapods, Programmatic UI </p>
 										<ul class="actions">
@@ -79,23 +79,37 @@
 						<!-- First Section -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Recent Projects</h2>
+									<h2>Skills</h2>
 								</header>
 								<ul class="features">
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
-										<h3><a href="" class="title">GroupChoice</a></h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3><a href="" class="title">Languages</a></h3>
+										<p> &bull; Swift</p>
+										<p> &bull; Python</p>
+										<p> &bull; Java</p>
+										<p> &bull; SQL</p>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
-										<h3><a href="" class="title">SimpleList</a></h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3><a href="" class="title">Frameworks</a></h3>
+										<p> &bull; Core Location</p>
+										<p> &bull; CloudKit & iCloud</p>
+										<p> &bull; UIKit</p>
+										<p> &bull; Auto Layout</p>
+										<p> &bull; MapKit </p>
+										<p> &bull; URLSession </p>
+
 									</li>
 									<li>
 										<span class="icon major style5 fa-gem"></span>
-										<h3><a href="" class="title">Sudoku Solver</a></h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3><a href="" class="title">Other</a></h3>
+										<p> &bull; Xcode</p>
+										<p> &bull; Git</p>
+										<p> &bull; Sketch</p>
+										<p> &bull; Adobe Lightroom</p>
+										
+
 									</li>
 								</ul>
 								<footer class="major">
@@ -177,7 +191,7 @@
 						<p class="copyright">&copy; Oleksandr Gribov</p>
 					</footer>
 
-			</div>
+			</div>	
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
